--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 motor>=3.3.2
 pymongo>=4.6.1
+dnspython>=2.4.0
 pydantic>=2.5.3
 pydantic-settings>=2.1.0
 python-jose[cryptography]>=3.3.0
