Refactor .env.example with empty placeholders
Updated .env.example to include placeholders for configuration values.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,17 @@
-MONGODB_URL=mongodb://localhost:27017
-DATABASE_NAME=stock_analysis
-JWT_SECRET_KEY=your-secret-key-change-this-in-production
+# Database
+MONGODB_URL=
+DATABASE_NAME=
+
+# JWT
+JWT_SECRET_KEY=
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# Google OAuth 2.0 Configuration
-# Get these from: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
-FRONTEND_URL=http://localhost:5173
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
 
-# Production Settings (uncomment and update for production)
-# GOOGLE_REDIRECT_URI=https://yourdomain.com/auth/google/callback
-# FRONTEND_URL=https://yourdomain.com
+# Frontend
+FRONTEND_URL=
+
