--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,8 @@ motor>=3.3.2
 pymongo>=4.6.1
 dnspython>=2.4.0
 pydantic>=2.5.3
+pydantic[email]>=2.5.3
+email-validator>=2.1.0
 pydantic-settings>=2.1.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
